# temporal-trip-booking-demo

./: README.md  activities.py  pyproject.toml  run_worker.py  shared.py  starter.py  test_approve.py  trip-booker.db  workflows.py
static/: script.js  styles.css
templates/: approval.html  index.html
