[project]
name = "trip-booking-temporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dataclasses>=0.8",
    "fastapi>=0.115.11",
    "flask[async]>=3.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.10",
    "temporalio>=1.10.0",
]
